objects/Development_Spending__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the requested amount approved?</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.ProjectLookup__c</valueField>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Project_Task__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Budget Line Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Development Spending</relationshipLabel>
        <relationshipName>Development_Spending</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectApproval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approval</label>
        <referenceTo>Contract_Committee_Submittal__c</referenceTo>
        <relationshipLabel>Development Spending</relationshipLabel>
        <relationshipName>Development_Spendings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Development Spending</relationshipLabel>
        <relationshipName>Development_Spending</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <inlineHelpText>Amount Requested to Spend</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spending_Description__c</fullName>
        <label>Spending Description</label>
        <type>TextArea</type>
    </fields>
    <label>Development Spending</label>
    <nameField>
        <displayFormat>DS-{0000000}</displayFormat>
        <label>Development Spending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Spending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>